--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	"dependencies": {
 		"@libsql/client": "^0.15.11",
 		"@sveltejs/adapter-netlify": "^5.2.1",
+		"dotenv": "^17.2.1",
 		"drizzle-orm": "^0.44.4",
 		"temporal-polyfill": "^0.3.0"
 	},
