--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview",
+		"preview": "pnpm run build && wrangler dev",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -15,7 +15,9 @@
 		"db:push": "drizzle-kit push",
 		"db:generate": "drizzle-kit generate",
 		"db:migrate": "drizzle-kit migrate",
-		"db:studio": "drizzle-kit studio"
+		"db:studio": "drizzle-kit studio",
+		"deploy": "pnpm run build && wrangler deploy",
+		"cf-typegen": "wrangler types && mv worker-configuration.d.ts src/"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.3.2",
@@ -38,10 +40,12 @@
 	},
 	"dependencies": {
 		"@libsql/client": "^0.15.11",
+		"@sveltejs/adapter-cloudflare": "^7.2.1",
 		"@sveltejs/adapter-netlify": "^5.2.1",
 		"dotenv": "^17.2.1",
 		"drizzle-orm": "^0.44.4",
-		"temporal-polyfill": "^0.3.0"
+		"temporal-polyfill": "^0.3.0",
+		"wrangler": "^4.31.0"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
